<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.xiaomaoqiu.old.ui.login.RegisterActivity"
    android:background="@color/white">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edit_phone"
        android:textCursorDrawable="@null"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:inputType="phone"
        android:background="@drawable/edit_background"
        android:hint="@string/input_phone_number"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:textCursorDrawable="@null"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:id="@+id/edit_password1"
        android:inputType="textPassword"
        android:background="@drawable/edit_background"
        android:hint="@string/input_password_1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:textCursorDrawable="@null"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:id="@+id/edit_password2"
        android:inputType="textPassword"
        android:background="@drawable/edit_background"
        android:hint="@string/input_password_2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_verify_code"
        android:layout_marginTop="25dp"
        >
        <EditText
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textCursorDrawable="@null"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:hint="@string/input_verify_code"
            android:id="@+id/edit_verify_code"
            android:background="@drawable/edit_background"/>
        <Button
            android:layout_marginLeft="15dp"
            android:layout_width="150dp"
            android:layout_height="34dp"
            android:textSize="12sp"
            android:background="@drawable/selector_btn"
            android:textColor="@color/white"
            android:id="@+id/btn_fetch_verify_code"
            android:text="@string/fetch_verify_code"
            android:onClick="get_verify_code"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/selector_btn"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/register"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:onClick="onRegisterClick"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#f00"
        android:id="@+id/tv_error"
        android:layout_marginTop="20dp"
        android:visibility="invisible"/>
</LinearLayout>
