<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_root"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/shape_dialog_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_pet"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_out_title"
            android:textColor="#333"
            android:textSize="20sp"
            />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:padding="10dp"
        android:text="@string/go_home_tip"
        android:textColor="#333"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="33dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_ellipse_button_hollow"
            android:gravity="center"
            android:onClick="onBtnConfirm"
            android:text="@string/go_home_confirm"
            android:textColor="@color/title"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_ellipse_button_hollow"
            android:gravity="center"
            android:onClick="onBtnCancel"
            android:text="@string/go_home_cancel"
            android:textColor="@color/title"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
