<?xml version="1.0" encoding="utf-8"?><!--去运动-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="36dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:id="@+id/go_sport_sport_ggspeak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:gravity="left"
        android:orientation="horizontal">

        <!--<com.xiaomaoqiu.old.widgets.CircleImageView-->
        <!--android:id="@+id/asyn_dialog_imgview"-->
        <!--android:layout_width="70dp"-->
        <!--android:layout_height="70dp"-->
        <!--android:src="@drawable/tab_health_head_defult"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_gravity="center_vertical"-->
        <!--app:inner_padding="1.5dp"-->
        <!--app:border_width="1.5dp"-->
        <!--app:border_color="@color/total_color_2"/>-->
        <!--<com.facebook.drawee.view.SimpleDraweeView-->
        <!--android:id="@+id/asyn_dialog_imgview"-->
        <!--android:layout_width="70dp"-->
        <!--android:layout_height="70dp"-->
        <!--android:layout_gravity="center_vertical"-->
        <!--android:gravity="center"-->
        <!--android:scaleType="fitXY"-->
        <!--fresco:fadeDuration="300"-->
        <!--fresco:actualImageScaleType="focusCrop"-->

        <!--fresco:placeholderImage="@drawable/tab_health_head_defult"-->
        <!--fresco:placeholderImageScaleType="fitCenter"-->

        <!--fresco:failureImage="@drawable/tab_health_head_defult"-->
        <!--fresco:failureImageScaleType="centerInside"-->
        <!--fresco:roundedCornerRadius="35dp"-->
        <!--/>-->
        <include layout="@layout/view_main_header_tosport"></include>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/go_sport_top_dialog_back" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shape_dialog_background"
            android:paddingBottom="23dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="23dp"
            android:text="@string/tosport_dog_chat"
            android:textColor="#8c8c8c"
            android:textSize="@dimen/after_word_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="top"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_dialog_background"
            android:orientation="vertical"
            android:paddingBottom="37dp"
            android:paddingLeft="17.5dp"
            android:paddingRight="17.5dp"
            android:paddingTop="37dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/asyn_dialog_ok"
                    android:background="@drawable/go_sport_bt_background"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1"
                    android:text="@string/tosport_tab1"
                    android:textSize="@dimen/after_word_size"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/asyn_dialog_quit"
                    android:layout_width="0dp"
                    android:background="@drawable/go_sport_bt_background"

                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tosport_tab2"

                    android:textSize="@dimen/after_word_size"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="13dp"
                android:layout_marginTop="15dp"
                android:background="@color/total_color_4" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/tosport_tip1"
                android:textColor="#8c8c8c"
                android:textSize="@dimen/after_word_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:visibility="gone"
                android:background="@color/total_color_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tosport_tip2"
                android:textColor="@color/total_color_7"
                android:visibility="gone"
                android:textSize="16sp" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>
