<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/go_sport_back_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@drawable/shape_dialog_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="26dp"
    android:paddingLeft="15.5dp"
    android:paddingRight="15.5dp"
    android:paddingTop="23dp">
    <!--<com.xiaomaoqiu.old.widgets.CircleImageView-->
    <!--android:id="@+id/asyn_dialog_imgview"-->
    <!--android:layout_width="70dp"-->
    <!--android:layout_height="70dp"-->
    <!--android:layout_marginBottom="26dp"-->
    <!--android:src="@drawable/tab_health_head_defult"-->
    <!--app:inner_padding="1.5dp"-->
    <!--app:border_width="1.5dp"-->
    <!--app:border_color="@color/total_color_2"/>-->


    <!--<com.facebook.drawee.view.SimpleDraweeView-->
    <!--android:id="@+id/asyn_dialog_imgview"-->
    <!--android:layout_width="70dp"-->
    <!--android:layout_height="70dp"-->
    <!--android:layout_marginBottom="26dp"-->
    <!--android:layout_gravity="center"-->
    <!--android:gravity="center"-->
    <!--android:scaleType="fitXY"-->
    <!--fresco:fadeDuration="300"-->
    <!--fresco:actualImageScaleType="focusCrop"-->

    <!--fresco:placeholderImage="@drawable/tab_health_head_defult"-->
    <!--fresco:placeholderImageScaleType="fitCenter"-->

    <!--fresco:failureImage="@drawable/tab_health_head_defult"-->
    <!--fresco:failureImageScaleType="centerInside"-->
    <!--fresco:roundedCornerRadius="35dp"-->
    <!--/>-->
    <include layout="@layout/view_main_header_tosport" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/tohome_message"
        android:textColor="@color/new_color_word"
        android:textSize="@dimen/after_word_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/asyn_dialog_ok"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:background="@drawable/go_sport_bt_background"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/tohome_tab1"
            android:textColor="@color/white"
            android:textSize="@dimen/after_word_size" />

        <Button
            android:id="@+id/asyn_dialog_quit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/go_sport_bt_background"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/tohome_tab2"
            android:textColor="@color/white"
            android:textSize="@dimen/after_word_size" />
    </LinearLayout>
</LinearLayout>